syntax = "proto3";

package Proto.Command.TimerSettings;

service TimerSettingsCommandService {
  rpc ChangeDocuTimerSaveInterval (ChangeDocuTimerSaveIntervalProtoCommand) returns (CommandResponse);
  rpc ChangeSnapshotSaveInterval (ChangeSnapshotSaveIntervalProtoCommand) returns (CommandResponse);
  rpc CreateTimerSettings (CreateTimerSettingsProtoCommand) returns (CommandResponse);
}

message ChangeDocuTimerSaveIntervalProtoCommand {
  string timerSettingsId = 1;
  int32 docuTimerSaveInterval = 2;
}

message ChangeSnapshotSaveIntervalProtoCommand {
  string timerSettingsId = 1;
  int32 snapshotSaveInterval = 2;
}

message CreateTimerSettingsProtoCommand {
  string timerSettingsId = 1;
  int32 documentationSaveInterval = 2;
  int32 snapshotSaveInterval = 3;
}

message CommandResponse {
  bool success = 1;
}
